// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Artist/Artist.tools.svelte: Default 1`] = `
<div>
   
  <span
    class="svelte-4mizr"
    role="article"
  >
    <div
      class="content svelte-4mizr"
    >
      <span
        class="artwork svelte-4mizr"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-1oz3k7v"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-4mizr"
      >
         
        <button
          class="primary iconOnly large svelte-11qpkf0"
          data-testid="play"
        >
          <i
            class="material-icons svelte-11qpkf0"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-11qpkf0"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-11qpkf0"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4mizr"
    >
      <h3
        class="svelte-4mizr"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-yqtzij"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: No album 1`] = `
<div>
   
  <span
    class="svelte-4mizr"
    role="article"
  >
    <div
      class="content svelte-4mizr"
    >
      <span
        class="artwork svelte-4mizr"
      >
        <img
          alt="./avatar.jpg"
          class="h-full w-full rounded-full svelte-1oz3k7v"
          height="256"
          loading="lazy"
          src="./avatar.jpg"
          width="256"
        />
         
        
      </span>
       
      <p
        class="controls svelte-4mizr"
      >
         
        <button
          class="primary iconOnly large svelte-11qpkf0"
          data-testid="play"
        >
          <i
            class="material-icons svelte-11qpkf0"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-11qpkf0"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-11qpkf0"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4mizr"
    >
      <h3
        class="svelte-4mizr"
      >
        Foo Fighters
      </h3>
       
      <h4
        class="svelte-yqtzij"
        slot="details"
      />
    </header>
  </span>
</div>
`;

exports[`Toolshot components/Artist/Artist.tools.svelte: Unknown 1`] = `
<div>
   
  <span
    class="svelte-4mizr"
    role="article"
  >
    <div
      class="content svelte-4mizr"
    >
      <span
        class="artwork svelte-4mizr"
      >
        <img
          class="h-full w-full rounded-full hidden svelte-1oz3k7v"
          height="256"
          loading="lazy"
          width="256"
        />
         
        <span
          class="h-full w-full svelte-1oz3k7v rounded-full"
        >
          <i
            class="material-icons svelte-1oz3k7v"
          >
            person
          </i>
        </span>
        
      </span>
       
      <p
        class="controls svelte-4mizr"
      >
         
        <button
          class="primary iconOnly large svelte-11qpkf0"
          data-testid="play"
        >
          <i
            class="material-icons svelte-11qpkf0"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="primary iconOnly large svelte-11qpkf0"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-11qpkf0"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </div>
     
    <header
      class="svelte-4mizr"
    >
      <h3
        class="svelte-4mizr"
      >
        Unknown
      </h3>
       
      <h4
        class="svelte-yqtzij"
        slot="details"
      >
        2 albums
      </h4>
    </header>
  </span>
</div>
`;
